libpayload: mvmap2315: Introduce timer driver
Testing: booted successfully.

Change-Id: I4a50c9fb7aec929ea29a3cf2eec3e424e3629c92
Signed-off-by: Hakim Giydan <hgiydan@marvell.com>
Reviewed-on: https://review.coreboot.org/16692
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>

--- a/payloads/libpayload/drivers/timer/Kconfig
+++ b/payloads/libpayload/drivers/timer/Kconfig
@@ -61,6 +61,9 @@ config TIMER_IMG_PISTACHIO
 config TIMER_MTK
 	bool "Timer for MediaTek MT8173"
 
+config TIMER_MVMAP2315
+	bool "Timer for Marvell MVMAP2315"
+
 endchoice
 
 config TIMER_MCT_HZ
@@ -107,6 +110,16 @@ config ARMADA38X_TIMER_REG
         hex "Timer register address"
         default 0xF1020314
         depends on TIMER_ARMADA38X
+
+config MVMAP2315_TIMER_FREQ
+	int "Hardware timer frequency"
+	depends on TIMER_MVMAP2315
+	default 1000000
+
+config MVMAP2315_TIMER_REG
+	hex "Timer register address"
+	depends on TIMER_MVMAP2315
+	default 0xE1020004
 
 config IPROC_PERIPH_GLB_TIM_REG_BASE
 	hex "Cygnus timer base address"
